<resources>
    <string name="app_name">IOTA Gym Monitor</string>
    <string name="title_home">Home</string>
    <string name="title_devices">Devices</string>
    <string name="title_iota">IOTA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="heart_rate_measurement">00</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beacon_a">Beacon A</string>
    <string name="distance">Distance :</string>
    <string name="heart_shape_background">heart shape background</string>
    <string name="_0m">0m</string>
    <string name="quality">Quality :</string>
    <string name="rssi">RSSI :</string>
    <string name="_0">0%</string>
    <string name="beacon_b">Beacon B</string>
    <string name="empty_dbm">0dBm</string>
    <string name="beacon_c">Beacon C</string>
</resources>
