<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/heartIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite_red_144dp"
            android:contentDescription="@string/heart_shape_background" />

        <TextView
            android:id="@+id/heartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="@string/heart_rate_measurement"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/cardview_light_background" />

        <TextView
            android:id="@+id/BeaconA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/heartIcon"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/beacon_a"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BeaconADistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconA"
            android:layout_marginStart="15dp"
            android:text="@string/distance"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconADistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconA"
            android:layout_marginStart="80dp"
            android:text="@string/_0m"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconAQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconADistance"
            android:layout_marginStart="15dp"
            android:text="@string/quality"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconAQualityeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconADistanceValue"
            android:layout_marginStart="80dp"
            android:text="@string/_0"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconARSSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconAQuality"
            android:layout_marginStart="15dp"
            android:text="@string/rssi"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconARSSIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconAQualityeValue"
            android:layout_marginStart="80dp"
            android:text="@string/empty_dbm"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconARSSI"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/beacon_b"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BeaconBDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconB"
            android:layout_marginStart="15dp"
            android:text="@string/distance"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconBDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconB"
            android:layout_marginStart="80dp"
            android:text="@string/_0m"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconBQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconBDistance"
            android:layout_marginStart="15dp"
            android:text="@string/quality"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconBQualityeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconBDistanceValue"
            android:layout_marginStart="80dp"
            android:text="@string/_0"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconBRSSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconBQuality"
            android:layout_marginStart="15dp"
            android:text="@string/rssi"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconBRSSIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconBQualityeValue"
            android:layout_marginStart="80dp"
            android:text="@string/empty_dbm"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconBRSSI"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/beacon_c"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BeaconCDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconC"
            android:layout_marginStart="15dp"
            android:text="@string/distance"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconCDistanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconC"
            android:layout_marginStart="80dp"
            android:text="@string/_0m"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconCQuality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconCDistance"
            android:layout_marginStart="15dp"
            android:text="@string/quality"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconCQualityeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconCDistanceValue"
            android:layout_marginStart="80dp"
            android:text="@string/_0"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconCRSSI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconCQuality"
            android:layout_marginStart="15dp"
            android:text="@string/rssi"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <TextView
            android:id="@+id/BeaconCRSSIValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/BeaconCQualityeValue"
            android:layout_marginStart="80dp"
            android:text="@string/empty_dbm"
            android:textAppearance="@android:style/TextAppearance.Material.Small" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/BeaconCRSSIValue"/>

    </RelativeLayout>



</FrameLayout>